Added bootstrap. Navigation and table styling

--- a/index.html
+++ b/index.html
@@ -3,43 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <title>Movie List</title>
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css"/>
     <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </head>
 <body onload="listMovies()">
+
+<nav class="my-navbar navbar navbar-default">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Movie List</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="nav-links collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Link</a></li>
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+</nav>
 
 <form onsubmit="event.preventDefault(); addMovie();">
     <label for="movie-input">Movie name</label>
     <input id="movie-input" type="text"/>
     <input type="submit" value="Add Movie"/>
 </form>
-
-<table>
-    <tbody id="movie-list">
+<div class="container">
+<table class="table table-striped">
+    <thead>
     <tr>
         <th>Movie</th>
         <th>Rating</th>
         <th>Watched</th>
     </tr>
-    <tr>
-        <td>Batman</td>
-        <td>5</td>
-        <td>yes</td>
-    </tr>
+    </thead>
+
+    <tbody id="movie-list">
     </tbody>
 </table>
+</div>
 
-
-
-
-
-
-
-
-
-
-
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
