--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="nav-links collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav row vdivide">
-                <li><a href="#">Home</a></li>
-                <li><a id="list" href="#">Link</a></li>
+                <li><a id="home" href="#">Home</a></li>
+                <li><a id="add-movie" href="#">Add a movie</a></li>
+                <li><a id="list" href="#">My List</a></li>
+                <li><a id="archive" href="#">Archive</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
@@ -54,13 +56,13 @@
     </div>
 </section>
 
-
+<section id="form-page">
 <form id="movie-form" onsubmit="event.preventDefault(); addMovie();">
     <label for="movie-input">Movie name</label>
     <input required id="movie-input" type="text"/>
     <input type="submit" class="btn btn-sm btn-primary" value="Add Movie"/>
 </form>
-
+</section>
 <table id="table" class="table table-striped">
     <thead>
     <tr>
