Added list adding and movie  listing

--- a/index.html
+++ b/index.html
@@ -74,25 +74,32 @@
 
 <section id="lists-page">
     <div id="list-container" class="container">
+        <h2 class="page-header">Lists</h2>
         <div id="target-location" class="row">
                 <!-- Lists get appended here -->
         </div>
     </div>
 </section>
 
+<section id="movie-page">
+    <div class="container">
+        <h2 id="movie-header" class="page-header"></h2>
+        <div class="table-responsive">
+    <table id="table" class="table">
+        <thead>
+        <tr>
+            <th>Movie</th>
+            <th>Rating</th>
+            <th>Watched</th>
+        </tr>
+        </thead>
 
-<table id="table" class="table table-striped">
-    <thead>
-    <tr>
-        <th>Movie</th>
-        <th>Rating</th>
-        <th>Watched</th>
-    </tr>
-    </thead>
-
-    <tbody id="movie-list">
-    </tbody>
-</table>
+        <tbody id="movie-list">
+        </tbody>
+    </table>
+    </div>
+    </div>
+</section>
 
 
 <footer class="footer">&copy; MovieList 2017
