--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         <h3 class="page-header">Add a new list</h3>
     <form id="list-form" onsubmit="event.preventDefault(); addList();">
         <div class="form-group">
-            <label class="list-movie-label" for="movie-input">List name</label>
-            <input type="text" class="form-control" id="movie-input">
+            <label class="list-movie-label" for="list-input">List name</label>
+            <input type="text" class="form-control" id="list-input" required>
         </div>
         <div class="form-group">
             <label class="list-movie-label" for="descr-box">Description</label>
