--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     </div><!-- /.container-fluid -->
 </nav>
 
+<section id="success-alert" class="alert alert-success" role="alert">Success</section>
+
 <section id="home-page">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
@@ -61,6 +63,7 @@
     <div id="list-container" class="container">
         <h2 class="page-header">Lists</h2>
         <div id="target-location" class="row">
+        <h3 class="text-center no-content"><i>No lists available</i></h3>
             <!-- Lists get appended here -->
         </div>
     </div>
@@ -121,7 +124,6 @@
         </div>
     </div>
 </section>
-
 <footer class="footer">&copy; MovieList 2017
 </footer>
 
