Added msgs if there are not lists available in the select menu. Added msgs if there are no lists available when adding movies with no lists

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 
 <section id="success-alert" class="alert alert-success" role="alert">Success</section>
 
+<section id="error-alert" class="alert alert-danger" role="alert">Error</section>
+
 <section id="home-page">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
@@ -93,6 +95,7 @@
             <div class="form-group">
                 <label class="list-movie-label" for="list-select">Select a list:</label>
                 <select id="list-select" class="form-control">
+                <option value="no-lists">No lists available</option>
                     <!-- options get appended here -->
                 </select>
             </div>
