--- a/index.html
+++ b/index.html
@@ -24,12 +24,6 @@
                 </button>
                 <a class="navbar-brand" href="#">Movie List</a>
             </div>
-            <form class="navbar-form navbar-left" onsubmit="event.preventDefault();">
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Search">
-                </div>
-                <button type="submit" class="btn btn-default">Submit</button>
-            </form>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="nav-links collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav row vdivide">
@@ -101,6 +95,9 @@
                     <label class="list-movie-label" for="movie-input">Movie name</label>
                     <input class="form-control" type="text" id="movie-input" required/>
                 </div>
+                <ul id="movie-query-list" class="list-group" style="max-height: 200px; overflow-y: scroll;">
+                    
+                </ul>
                 <input type="submit" class="btn btn-sm btn-primary" value="Add Movie" />
             </form>
         </div>
