Added images to search bar and added a default image if the location from the api is null

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <label class="list-movie-label" for="movie-input">Movie name</label>
                     <input class="form-control" type="text" id="movie-input" required/>
                 </div>
-                <ul id="movie-query-list" class="list-group" style="max-height: 200px; overflow-y: scroll;">
+                <ul id="movie-query-list" class="list-group">
                     
                 </ul>
                 <input type="submit" class="btn btn-sm btn-primary" value="Add Movie" />
